--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "components/arduino-esp32"]
 	path = components/arduino-esp32
 	url = https://github.com/espressif/arduino-esp32.git
+[submodule "components/arduino-DHT"]
+	path = components/arduino-DHT
+	url = https://github.com/chrispab/arduino-DHT.git
